crates/backyard-parser/tests/snapshots/echo__basic.snap
---
source: crates/backyard-parser/tests/echo.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: echo
    items:
      - node_type: string
        quote: Double
        value:
          - 72
          - 101
          - 108
          - 108
          - 111
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 1
            column: 5
            offset: 5
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 12
    offset: 12
leadings: ~
trailings: ~
