crates/backyard-parser/tests/snapshots/echo__multiple.snap
---
source: crates/backyard-parser/tests/echo.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: echo
    items:
      - node_type: string
        quote: Double
        value: Hello
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 1
            column: 5
            offset: 5
        leadings: ~
        trailings: ~
      - node_type: string
        quote: Double
        value: World
        loc:
          start:
            line: 1
            column: 14
            offset: 14
          end:
            line: 1
            column: 14
            offset: 14
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 14
        offset: 14
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 21
    offset: 21
leadings: ~
trailings: ~
